# aegisquant-hybrid

./: .gitignore  AegisQuant.sln  README.md
AegisQuant.Interop/: AegisQuant.Interop.csproj  EngineHandle.cs  EngineWrapper.cs  ErrorHandler.cs  Exceptions.cs  NativeMethods.cs  NativeTypes.cs
AegisQuant.Interop.Tests/: AegisQuant.Interop.Tests.csproj  EndToEndIntegrationTests.cs  FfiSafetyTests.cs  IntegrationTests.cs
AegisQuant.UI/: AegisQuant.UI.csproj  App.xaml  App.xaml.cs
aegisquant-core/: Cargo.toml
aegisquant-core/benches/: hot_path_bench.rs
aegisquant-core/src/: data_loader.rs  data_pipeline.rs  emergency.rs  engine.rs  error.rs  event_bus.rs  ffi.rs  ffi_string.rs  gateway.rs  indicators.rs  l1_gateway.rs  latency.rs  lib.rs  logger.rs  optimizer.rs  orderbook.rs  persistence.rs  precision.rs  risk.rs  strategy.rs  types.rs  warmup.rs
aegisquant-core/tests/: data_cleansing_tests.rs  equity_tests.proptest-regressions  equity_tests.rs  error_propagation_tests.rs  event_bus_property_tests.rs  ffi_layout_tests.rs  ffi_safety_tests.rs  gateway_tests.rs  indicator_property_tests.rs  l1_orderbook_property_tests.rs  logger_thread_safety_tests.proptest-regressions  logger_thread_safety_tests.rs  orderbook_stats_property_tests.rs  precision_tests.proptest-regressions  precision_tests.rs  risk_tests.rs  strategy_tests.rs  thread_safety_tests.rs  warmup_property_tests.rs
aegisquant-core/tests/property_tests/: error_propagation_tests.rs  ffi_layout_tests.rs  l1_orderbook_tests.rs  mod.rs  risk_tests.rs
docs2/: 01-ffi-string-safety.md  02-error-propagation.md  (+19 more)
(+89 files in other folders)
